--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       height: 100%;
       width: 100%;
    }
+   .container {
+      margin: 0 auto;
+      text-align: center;
+   }
    canvas, #game-canvas, img {
       background: #000;
       image-rendering: optimizeSpeed;
@@ -35,7 +39,7 @@
       image-rendering: optimize-contrast;
       image-rendering: pixelated;
       -ms-interpolation-mode: nearest-neighbor;
-      border: 5px solid #ddd;
+      border: 1px solid #ddd;
       width: 640px;
       height: 576px;
       margin: 0 auto;
@@ -44,14 +48,17 @@
 </head>
 <body>
 
-   <!-- Main stage for rendering game scenes -->
-   <canvas id="game-canvas" width="160" height="144" fixed></canvas>
+   <div class="container">
+      <!-- Main stage for rendering game scenes -->
+      <canvas id="game-canvas" width="160" height="144" fixed></canvas>
+   </div>
 
    <!-- Libraries -->
    <script src="lib/juicy.full.js"></script>
 
    <!-- main.js loads everything it needs -->
-   <script src="js/game_screen.js"></script>
+   <script src="js/component/tile.js"></script>
+   <script src="js/state/game.js"></script>
    <script src="main.js"></script>
 
    <script src="http://elliotfiske.com/bonald.js"></script>
