No real physics, move with arrow keys

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       background: #666;
       height: 100%;
       width: 100%;
+      margin: 0;
    }
    .container {
       margin: 0 auto;
@@ -57,7 +58,10 @@
    <script src="lib/juicy.full.js"></script>
 
    <!-- main.js loads everything it needs -->
-   <script src="js/component/tile.js"></script>
+   <script src="js/component/sprite.js"></script>
+   <script src="js/component/player.js"></script>
+   <script src="js/component/physics.js"></script>
+   <script src="js/component/tile_manager.js"></script>
    <script src="js/state/game.js"></script>
    <script src="main.js"></script>
 
