Slow down when you chunk out less blocks
(negative feedback) - If you help out the people behind you you speed up

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
    <script src="js/component/player.js"></script>
    <script src="js/component/physics.js"></script>
    <script src="js/component/tile_manager.js"></script>
+   <script src="js/state/pause.js"></script>
    <script src="js/state/game.js"></script>
    <script src="main.js"></script>
 
