--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
    <!-- main.js loads everything it needs -->
    <script src="js/component/sprite.js"></script>
    <script src="js/component/player.js"></script>
+   <script src="js/component/digger.js"></script>
    <script src="js/component/physics.js"></script>
    <script src="js/component/tile_manager.js"></script>
    <script src="js/state/pause.js"></script>
