Added controls to page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
    <div class="container">
       <!-- Main stage for rendering game scenes -->
       <canvas id="game-canvas" width="160" height="144" fixed></canvas>
+
+      <p>Left, right - P1 move</p>
+      <p>Down - P1 spin</p>
+      <p>A, D - P2 move</p>
+      <p>S - P2 spin</p>
    </div>
 
    <!-- Libraries -->
