--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
       <!-- Main stage for rendering game scenes -->
       <canvas id="game-canvas" width="160" height="144" fixed></canvas>
 
-      <p>Left, right - P1 move</p>
-      <p>A, D - P2 move</p>
+      <p>Left, right - move</p>
    </div>
 
    <!-- Libraries -->
