Gotta push up the stupid palette image

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
    <!-- main.js loads everything it needs -->
    <script src="js/component/sprite.js"></script>
+   <script src="js/component/colored_sprite.js"></script>
    <script src="js/component/player.js"></script>
    <script src="js/component/digger.js"></script>
    <script src="js/component/physics.js"></script>
