--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
    <script src="js/component/tile_manager.js"></script>
    <script src="js/state/pause.js"></script>
    <script src="js/state/game.js"></script>
+   <script src="js/palette.js"></script>
    <script src="main.js"></script>
 
    <script src="http://elliotfiske.com/bonald.js"></script>
