--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
    <script src="lib/juicy.full.js"></script>
 
    <!-- main.js loads everything it needs -->
+   <script src="js/component/particles.js"></script>
    <script src="js/component/sprite.js"></script>
    <script src="js/component/animations.js"></script>
    <script src="js/component/colored_sprite.js"></script>
