--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <title>Intro to Juicy</title>
+   <title>Quicksilver</title>
    <!-- <link rel="icon" type="image/GIF" href="res/favicon.ico"/> -->
    <meta name="apple-mobile-web-app-capable" content="yes"/>
    <meta name="full-screen" content="yes"/>
@@ -54,6 +54,7 @@
       <canvas id="game-canvas" width="160" height="144" fixed></canvas>
 
       <p>Left, right - move</p>
+      <p>Down - drop</p>
    </div>
 
    <!-- Libraries -->
