--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
    <script src="js/component/physics.js"></script>
    <script src="js/component/tile_manager.js"></script>
    <script src="js/state/pause.js"></script>
+   <script src="js/state/loading.js"></script>
    <script src="js/state/game.js"></script>
    <script src="main.js"></script>
 
