--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
    <script src="js/state/game.js"></script>
    <script src="main.js"></script>
 
+   <script src="memory-stats.js"></script>
+   <script>
+   var stats = new MemoryStats();
+   stats.domElement.style.position  = 'fixed';
+   stats.domElement.style.right     = '0px';
+   stats.domElement.style.top    = '0px';
+   document.body.appendChild( stats.domElement );
+   </script>
+
    <script src="http://elliotfiske.com/bonald.js"></script>
 </body>
 </html>
