--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
    <script src="js/palette.js"></script>
    <script src="js/component/particles.js"></script>
    <script src="js/component/sprite.js"></script>
+   <script src="js/component/ui.js"></script>
    <script src="js/component/animations.js"></script>
    <script src="js/component/goal.js"></script>
    <script src="js/component/colored_sprite.js"></script>
