--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
    <script src="js/component/player.js"></script>
    <script src="js/component/digger.js"></script>
    <script src="js/component/physics.js"></script>
+   <script src="js/component/bird.js"></script>
    <script src="js/component/tile_manager.js"></script>
    <script src="js/state/pause.js"></script>
    <script src="js/state/loading.js"></script>
