--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <canvas id="game-canvas" width="160" height="144" fixed></canvas>
 
       <p>Left, right - move</p>
+      <p>Up - ascend</p>
       <p>Down - drop</p>
    </div>
 
