--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
    <script src="lib/juicy.full.js"></script>
 
    <!-- main.js loads everything it needs -->
+   <script src="js/dynamic_palette.js"></script>
    <script src="js/palette.js"></script>
    <script src="js/component/particles.js"></script>
    <script src="js/component/sprite.js"></script>
