Tutorial level as well

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
    <script src="js/state/loading.js"></script>
    <script src="js/state/level.js"></script>
    <script src="js/state/level_infinite.js"></script>
+   <script src="js/state/level_tutorial.js"></script>
    <script src="main.js"></script>
 
    <script src="memory-stats.js"></script>
