--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
    <script src="js/component/particles.js"></script>
    <script src="js/component/sprite.js"></script>
    <script src="js/place_names.js"></script>
+   <script src="js/component/text_render.js"></script>
    <script src="js/component/ui.js"></script>
    <script src="js/component/animations.js"></script>
    <script src="js/component/goal.js"></script>
