Added happy jumping at bottom of level

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
    <script src="js/component/ui.js"></script>
    <script src="js/component/animations.js"></script>
    <script src="js/component/goal.js"></script>
+   <script src="js/component/follower.js"></script>
    <script src="js/component/colored_sprite.js"></script>
    <script src="js/component/player.js"></script>
    <script src="js/component/digger.js"></script>
