--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
    <script src="js/state/pause.js"></script>
    <script src="js/state/loading.js"></script>
    <script src="js/state/level.js"></script>
+   <script src="js/state/level_city.js"></script>
    <script src="js/state/level_infinite.js"></script>
    <script src="js/state/level_tutorial.js"></script>
    <script src="js/sound_manager.js"></script>
