--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
    <meta charset="utf-8">
    <title>Quicksilver</title>
-   <!-- <link rel="icon" type="image/GIF" href="res/favicon.ico"/> -->
+   <link rel="icon" type="image/GIF" href="favicon.ico"/>
    <meta name="apple-mobile-web-app-capable" content="yes"/>
    <meta name="full-screen" content="yes"/>
    <meta name="screen-orientation" content="portrait"/>
    <meta name="x5-fullscreen" content="true"/>
    <meta name="360-fullscreen" content="true"/>
 
-   <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
    <style>
    /* following code make sure user won't see selection in the app */
    body, canvas, div {
@@ -84,7 +83,6 @@
    <script src="js/state/level_city.js"></script>
    <script src="js/state/level_infinite.js"></script>
    <script src="js/state/level_tutorial.js"></script>
-   <script src="js/sound_manager.js"></script>
    <script src="main.js"></script>
 
    <script src="memory-stats.js"></script>
@@ -97,7 +95,5 @@
       document.body.appendChild( stats.domElement );
    }
    </script>
-
-   <script src="http://elliotfiske.com/bonald.js"></script>
 </body>
 </html>
