--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
    <script src="js/component/bird.js"></script>
    <script src="js/component/tile_manager.js"></script>
    <script src="js/state/pause.js"></script>
+   <script src="js/state/options.js"></script>
    <script src="js/state/loading.js"></script>
    <script src="js/state/level.js"></script>
    <script src="js/state/level_city.js"></script>
