Why is it broken

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
    <script src="js/component/ui.js"></script>
    <script src="js/component/animations.js"></script>
    <script src="js/component/goal.js"></script>
+   <script src="js/component/cutscene.js"></script>
    <script src="js/component/follower.js"></script>
    <script src="js/component/colored_sprite.js"></script>
    <script src="js/component/player.js"></script>
    <script src="js/component/digger.js"></script>
    <script src="js/component/physics.js"></script>
+   <script src="js/component/gate.js"></script>
    <script src="js/component/bird.js"></script>
    <script src="js/component/tile_manager.js"></script>
    <script src="js/state/pause.js"></script>
