Moved the world up by 2 chunks

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
    <script src="js/state/options.js"></script>
    <script src="js/state/loading.js"></script>
    <script src="js/state/level.js"></script>
+   <script src="js/state/level_boss.js"></script>
    <script src="js/state/level_city.js"></script>
    <script src="js/state/level_infinite.js"></script>
    <script src="js/state/level_tutorial.js"></script>
