Kinda boss level

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
    <script src="js/component/text_render.js"></script>
    <script src="js/component/ui.js"></script>
    <script src="js/component/animations.js"></script>
+   <script src="js/component/enemy.js"></script>
    <script src="js/component/goal.js"></script>
    <script src="js/component/cutscene.js"></script>
+   <script src="js/component/expiring.js"></script>
    <script src="js/component/follower.js"></script>
    <script src="js/component/colored_sprite.js"></script>
    <script src="js/component/player.js"></script>
