--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
    <script src="js/component/gate.js"></script>
    <script src="js/component/bird.js"></script>
    <script src="js/component/tile_manager.js"></script>
-   <script src="js/state/pause.js"></script>
    <script src="js/state/title_screen.js"></script>
+   <script src="js/state/pause.js"></script>
+   <script src="js/state/palette_selector.js"></script>
    <script src="js/state/options.js"></script>
    <script src="js/state/loading.js"></script>
    <script src="js/state/level.js"></script>
