--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
    <script src="js/component/sprite.js"></script>
    <script src="js/place_names.js"></script>
    <script src="js/component/text_render.js"></script>
+   <script src="js/component/boss.js"></script>
    <script src="js/component/ui.js"></script>
    <script src="js/component/animations.js"></script>
    <script src="js/component/enemy.js"></script>
@@ -90,6 +91,7 @@
    <script src="js/state/level_boss.js"></script>
    <script src="js/state/level_city.js"></script>
    <script src="js/state/level_infinite.js"></script>
+   <script src="js/state/level_preboss.js"></script>
    <script src="js/state/level_tutorial.js"></script>
    <script src="main.js"></script>
 
