--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
    <script src="js/state/level_city.js"></script>
    <script src="js/state/level_infinite.js"></script>
    <script src="js/state/level_preboss.js"></script>
+   <script src="js/state/win_screen.js"></script>
    <script src="js/state/level_tutorial.js"></script>
    <script src="main.js"></script>
 
